<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Quiz Geek BR</string>
    <string name="Iniciar">Iniciar</string>
    <string name="DescriptionImage1">Logo GBR</string>
    <string name="DescriptionImage2">Logo Team7</string>
    <string name="Séries">Séries</string>
    <string name="Animes">Animes</string>
    <string name="naruto">Naruto</string>
    <string name="dragon_ball">Dragon Ball</string>
    <string name="one_piece">One Piece</string>
    <string name="jujutso_kaisen">Jujutso Kaisen</string>
    <string name="attack_in_titans">Attack in Titans</string>
    <string name="demon_slayer">Demon Slayer</string>
    <string name="todos">Todos</string>
    <string name="voltar_1">Voltar 1</string>
    <string name="DescriptionSeta1">DescriptionSeta1</string>
    <string name="game_of_thrones">Game of Thrones</string>
    <string name="stranger_things">Stranger Things</string>
    <string name="the_mandalorian">The Mandalorian</string>
    <string name="the_witcher">The Witcher</string>
    <string name="breaking_bad">Breaking Bad</string>
    <string name="the_boys">The Boys</string>
    <string name="qual_o_nome_do_protagonista_principal_de_dragon_ball">Qual é o nome do protagonista principal de Dragon Ball?</string>
    <string name="vegeta">Vegeta</string>
    <string name="gohan">Gohan</string>
    <string name="piccolo">Piccolo</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="goku">Goku</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="string_goku">\@string/goku</string>
    <string name="gokus">Gokus</string>
    <string name="vegetaa">Vegeta</string>
    <string name="DescriptionHome">home</string>
    <string name="Descriptionsound">som</string>
    <string name="resposta_1">Resposta 1</string>
    <string name="resposta_2">Resposta 2</string>
    <string name="resposta_3">Resposta 3</string>
    <string name="resposta_4">Resposta 4</string>
    <string name="pergunta">Pergunta</string>
    <string name="prision_break">Prision Break</string>
    <string name="supernatural">Supernatural</string>
    <string name="v1_0_1">v1.0.1</string>
    <string name="version">version</string>
    <string name="full_metal_alchemist_brotherhood">Full Metal Alchemist:Brotherhood</string>
    <string name="pergunta_1_30">Pergunta 1/30</string>
    <string name="pergunta_1_34">pergunta_1_34</string>
    <string name="pergunta_1_344">pergunta 1/34</string>
    <string name="pergunta_1_31">pergunta 1/31</string>
    <string name="cr_ditos">Créditos\n</string>
    <string name="arte_design_marcela_mozer">ARTE/DESING: Marcela Mozer</string>
    <string name="pesquisa_marcela_mozer">PESQUISAS: Marcela Mozer</string>
    <string name="desenvolvedor_gustavo_alves">DESENVOLVEDOR:   Gustavo Alves</string>
    <string name="revisores_djeison_miranda_amanda_regina_felipe_alves_raphaela_cristina_e_vinicius_dante">REVISÃO: Djeison Mirando, Amanda Regina, Felipe Alves, Raphaela Cristina e Vinicius Dante</string>
    <string name="obrigado_pela_contribui_o_de_todos_u2764">Obrigado pela contribuição de todos #u2764</string>
    <string name="obrigado_pela_contribui_o_de_todos">Obrigado pela contribuição de todos 🖤</string>

</resources>