<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Three"
    android:background="@drawable/background"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/version"
        android:layout_width="45dp"
        android:layout_height="25dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/version"
        android:text="@string/v1_0_1"
        android:textColor="@color/black"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/seta1e"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/seta1e"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/DescriptionSeta1"
        android:onClick="iniciar"
        tools:ignore="UsingOnClickInXml" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/DescriptionImage1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/logo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintVertical_chainStyle="packed">

            <Button
                android:id="@+id/button4"
                style="@style/BotaoBrancoPreto"
                android:onClick="iniciarnt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="30dp"
                android:text="@string/naruto"
                android:background="@drawable/button_background"
                tools:ignore="UsingOnClickInXml,VisualLintButtonSize" />


            <Button
                android:id="@+id/button6"
                style="@style/BotaoBrancoPreto"
                android:onClick="iniciarop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="30dp"
                android:text="@string/one_piece"
                android:background="@drawable/button_background"
                tools:ignore="UsingOnClickInXml,VisualLintButtonSize" />

            <Button
                android:id="@+id/button7"
                style="@style/BotaoBrancoPreto"
                android:onClick="iniciarjk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="30dp"
                android:text="@string/jujutso_kaisen"
                android:background="@drawable/button_background"
                tools:ignore="UsingOnClickInXml,VisualLintButtonSize" />

            <Button
                android:id="@+id/button8"
                style="@style/BotaoBrancoPreto"
                android:onClick="iniciarat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="30dp"
                android:text="@string/attack_in_titans"
                android:background="@drawable/button_background"
                tools:ignore="UsingOnClickInXml,VisualLintButtonSize" />

            <Button
                android:id="@+id/button9"
                style="@style/BotaoBrancoPreto"
                android:onClick="iniciards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="30dp"
                android:text="@string/demon_slayer"
                android:background="@drawable/button_background"
                tools:ignore="UsingOnClickInXml,VisualLintButtonSize" />

            <Button
                android:id="@+id/button5"
                style="@style/BotaoBrancoPreto"
                android:onClick="iniciardb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="30dp"
                android:text="@string/dragon_ball"
                android:background="@drawable/button_background"
                tools:ignore="OnClick,UsingOnClickInXml,VisualLintButtonSize" />

            <Button
                android:id="@+id/button10"
                style="@style/BotaoBrancoPreto"
                android:onClick="iniciarfab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="30dp"
                android:text="@string/full_metal_alchemist_brotherhood"
                android:background="@drawable/button_background"
                tools:ignore="OnClick,UsingOnClickInXml,VisualLintButtonSize" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/DescriptionImage2"
        android:src="@drawable/logo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
