<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/background"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/version"
        android:layout_width="45dp"
        android:layout_height="25dp"
        android:layout_marginStart="50mm"
        android:contentDescription="@string/version"
        android:text="@string/v1_0_1"
        android:textColor="@color/black"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InOrMmUsage,TextSizeCheck" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/DescriptionHome"
        android:onClick="homeinicio"
        android:src="@drawable/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/logo2"
        android:src="@drawable/logo2"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/DescriptionImage2" />

    <TextView
        android:id="@+id/credits_research"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesquisa_marcela_mozer"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/logo2"
        app:layout_constraintRight_toLeftOf="@id/logo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/credits_art_design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arte_design_marcela_mozer"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/credits_research"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/credits_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desenvolvedor_gustavo_alves"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/credits_art_design"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/credits_reviewers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:gravity="start"
        android:text="REVISÃO:         Djeison Miranda\n                           Amanda Regina \n                           Felipe Alves \n                           Raphaela Cristina \n                           Vinicius Dante"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/credits_developer"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/thanks_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obrigado_pela_contribui_o_de_todos"
        android:textColor="#800000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/credits_reviewers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>