<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/background"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/version"
        android:layout_width="45dp"
        android:layout_height="25dp"
        android:layout_marginStart="50mm"
        android:contentDescription="@string/version"
        android:text="@string/v1_0_1"
        android:textColor="@color/black"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InOrMmUsage,TextSizeCheck" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/DescriptionImage1" />

    <Button
        android:id="@+id/button1"
        android:onClick="iniciar"
        style="@style/ContainerComponents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535"
        tools:ignore="UsingOnClickInXml,VisualLintButtonSize" />

    <TextView
        android:id="@+id/creditos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:onClick="iniciarcreditos"
        android:text="@string/cr_ditos"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/logo2"
        app:layout_constraintEnd_toEndOf="@id/button1"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button1"
        tools:ignore="TextSizeCheck,UsingOnClickInXml" />

    <ImageView
        android:id="@+id/logo2"
        android:src="@drawable/logo2"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/DescriptionImage2" />

</androidx.constraintlayout.widget.ConstraintLayout>
